# AVA

./: .env.example  .gitattributes  .gitignore  .pre-commit-config.yaml  AVA - Copy.py  AVA.py  AVA_1.1.py  CHANGELOG.md  CITATION.cff  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  GEMINI.md  Guide_through_conversation.md  LICENSE  Modelfile  README.md  SECURITY.md  TODO.md  cmd error log.txt  cmd here.txt  key_mapper2.py  launch.bat  launch_v3.bat  pyproject.toml  requirements-dev.txt  requirements.txt  run_core.py  run_frankensystem.py  run_node.py  run_tui.py  server.py  setup.py  setup_ava.ps1  setup_ava.py  start.bat  start.sh  state.json
.claude/: settings.local.json
.github/: FUNDING.yml  PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.yml  bug_report_auto.yml  config.yml  feature_request.yml
.github/workflows/: ci.yml  gguf.yml  pages.yml  release.yml
MAIN/: AVA.py  audio.py  chat.py  narrator_tts_test.py  obscured_message.py  recognizer.py  requirements.txt  sapi_hack.py  speaking_text.py  speech.py  temp.txt
artifacts/tokenizers/: teacher_distill_v1_byte_bpe_320_v2.json  teacher_distill_v1_byte_bpe_384.json
config/: ava.yaml.example  cortex_medulla.yaml  frankensystem.yaml  tools.yaml  user_config.yaml.example
configs/experiments/: ava-11m-arc-label-calibration-v1.yaml  ava-11m-failure-patch-v1.yaml  ava-11m-failure-patch-v2-hf-bpe.yaml  ava-11m-failure-patch-v2-hf-unigram.yaml  ava-11m-failure-patch-v2.yaml  ava-11m-general-sft-v2-lr5e5.yaml  ava-11m-looped-public-plus-teacher-adapter-v1.yaml  ava-11m-looped-public-plus-teacher-full-v1.yaml  ava-11m-looped-public-plus-teacher-full-v2-512.yaml  ava-11m-public-benchmark-distill-v1.yaml  ava-11m-public-plus-teacher-control-v1.yaml  ava-11m-public-plus-teacher-control-v2-512.yaml  ava-11m-public-plus-teacher-qwen-warm-v1.yaml  ava-11m-qwen-tokenizer-align-v1.yaml  ava-11m-qwen-tokenizer-align-v2.yaml  ava-11m-smoke-sft.yaml  ava-11m-smoke.yaml  ava-11m-teacher-distill-bpe-v2.yaml  ava-11m-tool-combo-v1.yaml  ava-11m-tool-micro-patch-v1.yaml  ava-11m-tool-multiview-guardrail-v1.yaml  ava-19m-smoke.yaml  (+24 more)
corpora/: README.md
docs/: AGENTIC_DESIGN.md  API_EXAMPLES.md  ARCHITECTURE.md  ARCHITECTURE_VISION.md  ASSUMPTIONS.md  AVA_research.md  BEGINNER_GUIDE.md  BENCHMARKS.md  COMPARE.md  CONFIGURATION.md  CORTEX_MEDULLA.md  CREDITS.md  DATA.md  DEVELOPMENT.md  ENVIRONMENT_VARIABLES.md  EXPERIMENTS.md  GETTING_STARTED.md  INDEX.md  INSTALLATION.md  OPTIMIZATION_STRATEGIES.md  QUICKSTART.md  README.md  README_old.md  REPRODUCE.md  RESEARCH_ROADMAP.md  RESULTS.md  ROADMAP.md  STRUCTURE.md  STRUCTURE_VISION.md  TEACHER_DISTILLATION_SOP.md  TODO.md  TROUBLESHOOTING.md  TUI.md  TUI_USER_GUIDE.md  USAGE.md  USER_GUIDE.md  WHY.md  WINDOWS_SETUP.md
examples/: demo.py
installer/: README.md
legacy/: README.md  cli_v2.py
paper/: .gitignore  RELEASE_NOTES.md  appendix.tex  main.tex  refs.bib
scripts/: build_portable.py  build_server.py  build_sidecar.py  chat.py  convert_to_gguf.py  generate_eval_aligned_repair.py  generate_icons.py  generate_repair_corpus.py  generate_synthetic_data.py  generate_v3_distillation.py  generate_v3_enhanced_repair.py  quantize_model.py  verify_install.py
site/: README.md  app.js  index.html  styles.css  tweaks-app.jsx
src/: ___init___.py  __init__.py  agent.py  cli.py
tests/: conftest.py  test_activity.py  test_benchmarks.py  test_corpus_recipes.py  test_data.py  test_dense_retrieval.py  test_env.py  test_eval.py  test_experiments.py  test_external_benchmarks.py  test_inspect.py  test_memory.py  test_memory_transfer.py  test_model.py  test_reranking.py  test_research.py  test_retrieval.py  test_rl.py  test_sessions.py  test_synthetic.py  test_tokenizer.py  test_tools.py  test_train.py
tokenizers/: tool_synth_v1-greedy384.json  tool_synth_v1-greedy512.json
tui/: __init__.py  app.py  persistence.py  streaming.py
ui/: Cargo.toml  README.md  build.bat  build.sh  next.config.js  package-lock.json  package.json  tailwind.config.ts  tsconfig.json  tsconfig.tsbuildinfo
ui/.husky/: pre-commit
ui/public/: .gitkeep  site.webmanifest
ui/scripts/: generate-icons.mjs
ui/src/: animations.rs  app.rs  backend.rs  components.rs  main.rs  theme.rs
ui/src-tauri/: Cargo.toml  tauri.conf.json
ui/src-tauri/config/: ava.toml
ui/src-tauri/icons/: icon.icns
ui/src-tauri/src/: backend.rs  bug_report.rs  commands.rs  main.rs  server_launcher.rs  state.rs  tray.rs
ui/src-tauri/src/engine/: agency.rs  cognitive.rs  config.rs  mod.rs  models.rs  ollama.rs  routes.rs  server.rs  state.rs  titans.rs
ui/src-tauri/src/tests/: mod.rs  models_tests.rs  ollama_tests.rs  routes_tests.rs  state_tests.rs
ui/src/app/: globals.css  layout.tsx  page.tsx
ui/src/components/: CommandPalette.tsx  ErrorBoundary.tsx  index.ts
ui/src/components/background/: SynapticBackground.tsx  index.ts
ui/src/components/chat/: ChatArea.tsx  ChatInput.tsx  MessageBubble.tsx  StreamingText.tsx  index.ts
ui/src/components/connection/: ConnectionStatus.tsx
ui/src/components/feedback/: BugReportDialog.tsx
ui/src/components/indicators/: Skeleton.tsx  ThinkingIndicator.tsx  Toast.tsx
ui/src/components/layout/: Sidebar.tsx  SplitPane.tsx  TitleBar.tsx  index.ts
ui/src/components/metrics/: BeliefStateCard.tsx  CognitiveStateCard.tsx  MetricCard.tsx  NeuralActivity.tsx  index.ts
ui/src/components/settings/: BackendSettings.tsx  SettingsPanel.tsx
ui/src/components/startup/: ServerStartup.tsx  index.ts
ui/src/components/system/: SystemStatus.tsx
ui/src/components/three/: NeuralBrain.tsx  ParticleWave.tsx
ui/src/components/tools/: ToolsPanel.tsx
ui/src/components/wizard/: WizardOverlay.tsx  index.ts
ui/src/components/wizard/shared/: StepIndicator.tsx
ui/src/components/wizard/steps/: CompleteStep.tsx  PersonalizationStep.tsx  SystemCheckStep.tsx  WelcomeStep.tsx
ui/src/hooks/: index.ts  useConnectionHealth.ts  useStreamingChat.ts  useSystemPolling.ts
ui/src/lib/: animations.ts  utils.ts
ui/src/providers/: ThemeProvider.tsx
ui/src/stores/: core.ts
ui/src/types/: three-jsx.d.ts
(+2022 files in other folders)
