[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ava"
version = "0.1.0"
description = "Session-first small-model lab for an English+math AVA on 4 GB VRAM"
readme = "README.md"
license = { text = "MIT" }
authors = [
    { name = "Muhammad Afsah Mumtaz" }
]
requires-python = ">=3.10"
dependencies = [
    "pyyaml>=6.0,<7",
]

[project.optional-dependencies]
dev = [
    "mypy>=1.10,<2",
    "pytest>=8.2,<9",
    "pytest-cov>=5,<6",
    "ruff>=0.11,<1",
    "types-PyYAML>=6.0.12",
]
train = [
    "torch>=2.4,<3",
]
all = [
    "ava[dev,train]",
]

[project.scripts]
ava = "ava.cli:main"

[project.urls]
Repository = "https://github.com/NAME0x0/AVA"

[tool.setuptools]
package-dir = { "" = "src" }

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
addopts = [
    "-q",
    "-p",
    "no:cacheprovider",
]

[tool.mypy]
python_version = "3.10"
files = ["src", "tests"]
ignore_missing_imports = true
warn_unused_configs = true

[tool.ruff]
target-version = "py310"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

[tool.ruff.lint.isort]
known-first-party = ["ava"]
