[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ava"
version = "0.1.0"
description = "Research and training stack for AVA — a compact tool-using, memory-aware assistant targeting 4 GB VRAM, spanning custom transformers, verifier-RL, external memory, multi-domain benchmarks, and inference optimization"
readme = "README.md"
license = { text = "MIT" }
authors = [
    { name = "Muhammad Afsah Mumtaz" }
]
requires-python = ">=3.10"
keywords = [
    "language-model",
    "small-model",
    "4gb-vram",
    "edge-inference",
    "tool-use",
    "external-memory",
    "titans-memory",
    "verifier-rl",
    "recurrent-depth",
    "distillation",
    "inference-optimization",
    "quantization",
    "int4",
    "kv-cache-compression",
    "turboquant",
    "yarn",
    "long-context",
    "gemma",
    "benchmarks",
    "reproducible-research",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = [
    "pyyaml>=6.0,<7",
]

[project.optional-dependencies]
dev = [
    "mypy>=1.10,<2",
    "pytest>=8.2,<9",
    "pytest-cov>=5,<6",
    "ruff>=0.11,<1",
    "types-PyYAML>=6.0.12",
]
train = [
    "torch>=2.4,<3",
]
bench = [
    "datasets>=3.2,<5",
    "pyarrow>=18,<22",
    "tokenizers>=0.20,<1",
    "transformers>=4.51,<5",
    "huggingface-hub>=0.34,<1",
    "sentence-transformers>=3.0,<6",
]
all = [
    "ava[dev,train,bench]",
]

[project.scripts]
ava = "ava.cli:main"

[project.urls]
Repository = "https://github.com/NAME0x0/AVA"

[tool.setuptools]
package-dir = { "" = "src" }

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
addopts = [
    "-q",
    "-p",
    "no:cacheprovider",
    "--basetemp=.pytest-tmp",
]

[tool.mypy]
python_version = "3.10"
files = ["src", "tests"]
ignore_missing_imports = true
warn_unused_configs = true

# TODO(types): incremental type-cleanup. Modules below are exempted while we
# tighten signatures across the research stack. New code should be fully typed;
# remove modules from the lists below as they're cleaned up. See
# https://github.com/NAME0x0/AVA/issues for the tracking issue.

[[tool.mypy.overrides]]
module = [
    "ava.activity",
    "ava.cli",
    "ava.corpus_recipes",
    "ava.dense_retrieval",
    "ava.eval",
    "ava.experiments",
    "ava.external_benchmarks",
    "ava.inspect",
    "ava.memory_transfer",
    "ava.model",
    "ava.reranking",
    "ava.rl",
    "ava.sessions",
    "ava.synthetic",
    "ava.tokenizer",
    "ava.tokenizer_artifacts",
    "ava.tools",
    "ava.train",
]
ignore_errors = true

# tests/ has no __init__.py, so mypy sees each file as a top-level module
[[tool.mypy.overrides]]
module = [
    "test_activity",
    "test_benchmarks",
    "test_corpus_recipes",
    "test_env",
    "test_experiments",
    "test_external_benchmarks",
    "test_inspect",
    "test_memory_transfer",
    "test_reranking",
    "test_retrieval",
    "test_sessions",
    "test_synthetic",
    "test_tokenizer",
    "test_train",
]
ignore_errors = true

[tool.ruff]
target-version = "py310"
line-length = 100
extend-exclude = ["experiments/", "scripts/generate_*.py"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
ignore = ["E501"]  # line length enforced by ruff format, not lint

[tool.ruff.lint.isort]
known-first-party = ["ava"]
