[package]
name = "ava-ui"
version = "0.1.0"
edition = "2021"
authors = ["AVA Project"]
description = "Lightweight neural UI for AVA cognitive system"

[dependencies]
# Core UI framework - immediate mode, GPU accelerated
eframe = { version = "0.29", features = ["persistence"] }
egui = "0.29"
egui_extras = { version = "0.29", features = ["image"] }

# Async runtime for backend communication
tokio = { version = "1.0", features = ["rt-multi-thread", "sync", "time", "net", "io-util", "macros"] }

# HTTP client for Ollama/backend
reqwest = { version = "0.12", features = ["json"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Time handling
chrono = "0.4"

# Cross-platform clipboard
arboard = "3.4"

# Logging
tracing = "0.1"
tracing-subscriber = "0.3"

# Random for particles
rand = "0.8"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true
panic = "abort"

[profile.dev]
opt-level = 1
