[package]
name = "ava-ui"
version = "3.0.0"
description = "AVA Neural Interface - Cortex-Medulla Architecture"
authors = ["AVA Project"]
edition = "2021"

[build-dependencies]
tauri-build = { version = "1.5", features = [] }

[dependencies]
tauri = { version = "1.6", features = [
    "shell-open",
    "window-close",
    "window-minimize",
    "window-maximize",
    "window-unmaximize",
    "window-start-dragging",
    "window-set-size",
    "window-set-position",
    "clipboard-write-text",
    "clipboard-read-text",
    "notification-all"
] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.0", features = ["rt-multi-thread", "sync", "time", "net", "macros"] }
reqwest = { version = "0.12", features = ["json"] }
futures-util = "0.3"
chrono = "0.4"
tracing = "0.1"
tracing-subscriber = "0.3"

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true
panic = "abort"
