[package]
name = "ava-ui"
version = "3.2.0"
description = "AVA Neural Interface - Cortex-Medulla Architecture"
authors = ["AVA Project"]
edition = "2021"

[build-dependencies]
tauri-build = { version = "1.5", features = [] }

[dependencies]
tauri = { version = "1.6", features = [
    "shell-open",
    "window-all",
    "clipboard-write-text",
    "clipboard-read-text",
    "notification-all",
    "system-tray",
    "process-exit",
    "process-relaunch",
    "global-shortcut-all",
    "os-all",
    "http-all",
    "updater"
] }

# Plugins for installer features
tauri-plugin-single-instance = { git = "https://github.com/tauri-apps/plugins-workspace", branch = "v1" }
tauri-plugin-autostart = { git = "https://github.com/tauri-apps/plugins-workspace", branch = "v1" }

# For opening URLs (GitHub issues)
open = "5"

# For screenshot capture (bug reporting)
screenshots = "0.8"

# For system info collection (bug reporting)
sysinfo = "0.30"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.0", features = ["rt-multi-thread", "sync", "time", "net", "macros"] }
reqwest = { version = "0.12", features = ["json"] }
futures-util = "0.3"
chrono = "0.4"
tracing = "0.1"
tracing-subscriber = "0.3"

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true
panic = "abort"
