[package]
name = "ava"
version = "4.1.0"
description = "AVA Neural Interface - Unified Cortex-Medulla Architecture"
authors = ["AVA Project"]
edition = "2021"

[build-dependencies]
tauri-build = { version = "1.5", features = [] }

[dependencies]
tauri = { version = "1.6", features = [
    "shell-open",
    "window-all",
    "clipboard-write-text",
    "clipboard-read-text",
    "notification-all",
    "system-tray",
    "process-exit",
    "process-relaunch",
    "global-shortcut-all",
    "os-all",
    "http-request",
    "updater",
    "fs-create-dir",
    "fs-exists",
    "fs-read-dir",
    "fs-read-file",
    "fs-write-file",
    "path-all"
] }

# Plugins for installer features
tauri-plugin-single-instance = { git = "https://github.com/tauri-apps/plugins-workspace", branch = "v1" }
tauri-plugin-autostart = { git = "https://github.com/tauri-apps/plugins-workspace", branch = "v1" }

# Embedded HTTP Server (replaces Python backend)
axum = "0.7"
tower = { version = "0.4", features = ["util"] }
tower-http = { version = "0.5", features = ["cors", "trace"] }

# For opening URLs (GitHub issues)
open = "5"

# For screenshot capture (bug reporting)
screenshots = "0.8"

# For system info collection (bug reporting)
sysinfo = "0.30"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.0", features = ["rt-multi-thread", "sync", "time", "net", "macros", "fs"] }
tokio-stream = "0.1"
reqwest = { version = "0.12", features = ["json", "stream"] }
futures = "0.3"
futures-util = "0.3"
chrono = "0.4"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# For configuration
toml = "0.8"
directories = "5"

# For async channels and utilities
async-trait = "0.1"
once_cell = "1.19"
parking_lot = "0.12"
uuid = { version = "1.6", features = ["v4"] }
thiserror = "1.0"
anyhow = "1.0"

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true
panic = "abort"
